--- a/vignettes/BNS_tutorial_by_command_line.Rmd
+++ b/vignettes/BNS_tutorial_by_command_line.Rmd
@@ -2,7 +2,10 @@
 output:
   word_document: default
   pdf_document: default
-  html_document: default
+  html_document:
+    toc: true
+    toc_depth: 3
+    number_sections: true
 ---
 %\VignetteIndexEntry{1. Line command tutorial}
 %\VignetteKeywords{Line command}
