Upgrading functions and tutorial

--- a/vignettes/BNS_tutorial_by_command_line(pt).Rmd
+++ b/vignettes/BNS_tutorial_by_command_line(pt).Rmd
@@ -7,7 +7,7 @@ output:
     toc_depth: 3
     number_sections: true
 ---
-%\VignetteIndexEntry{1. Line command tutorial}
+%\VignetteIndexEntry{3. Tutorial para o console do R}
 %\VignetteKeywords{Line command}
 %\VignettePackage{BioNetStat}
 %\VignetteEngine{knitr::knitr}
@@ -45,14 +45,14 @@ varSets<-readSetFile(fileName = "~/path_to_file/variableSet_BioNetStat_tutorial_
 ```
 ## Escolhendo os parâmetros para construção da matriz de adjacência
 
-Nessa função o usuário escolhe quais os parâmetros para a construção das redes como o método estátístico usado (method), onde é possível escolher entre as correlação de Pearson, Spearman ou Kendall ou então inserir uma função que retorne uma matriz de adjacência. Se o usuário escolher uma das três correlações ele deve selecionar qual valor será usado como força de associação ("corr", "pvalue", "fdr") em 'association', a força que será usada como threshold na construção das redes ("corr", "pvalue", "fdr") e o valor numérico (entre 0 e 1) usado como threshold, em 'thr.value'. Além disso é possivel escolher se a rede terá peso ou não nas arestas em 'weighted'.
+Nessa função o usuário escolhe quais os parâmetros para a construção das redes como o método estitístico usado (method), onde é possível escolher entre as correlação de Pearson, Spearman ou Kendall ou então inserir uma função que retorne uma matriz de adjacência. Se o usuário escolher uma das três correlações ele deve selecionar qual valor será usado como força de associação ("corr", "pvalue", "fdr") em 'association', a força que será usada como threshold na construção das redes ("corr", "pvalue", "fdr") e o valor numérico (entre 0 e 1) usado como threshold, em 'thr.value'. Além disso é possível escolher se a rede terá peso ou não nas arestas em 'weighted'.
 ```Rscript
 funAdjMat<-adjacencyMatrix(method = "pearson",association = "corr",threshold = "corr",thr.value = 0.5,weighted = T)
 ```
 
 ## Comparando as redes
 
-A função 'diffNetAnalysis' realiza o teste de comparação de múltiplas redes. Para comparar as redes é necessário escolher um dos métodos de comparação em 'method'. Nos argumentos 'varFile', 'labels' e 'varSets', o usruário insere os objetos da matriz de valores, a classificação das amostras e os grupos de variáveis, respectivamente. A função que constrói a matriz de correlação é inserida em 'adjacencyMatrix'. O usuário deve definir o numero de permutações para o cálculo do p-valor ('numPermutations'), o numero mínimo de vértices usados para construir as redes ('min.vert'). Se o usuário escolher comparar as redes pelas distribuições do espectro ou de grau ele deve selecionar qual medidad de largura de banda será usada em 'options', podendo ser 'bandwidth'='Silverman' ou 'bandwidth'='Sturges'.
+A função 'diffNetAnalysis' realiza o teste de comparação de múltiplas redes. Para comparar as redes é necessário escolher um dos métodos de comparação em 'method'. Nos argumentos 'varFile', 'labels' e 'varSets', o usuário insere os objetos da matriz de valores, a classificação das amostras e os grupos de variáveis, respectivamente. A função que constrói a matriz de correlação é inserida em 'adjacencyMatrix'. O usuário deve definir o numero de permutações para o cálculo do p-valor ('numPermutations'), o numero mínimo de vértices usados para construir as redes ('min.vert'). Se o usuário escolher comparar as redes pelas distribuições do espectro ou de grau ele deve selecionar qual medida de largura de banda será usada em 'options', podendo ser 'bandwidth'='Silverman' ou 'bandwidth'='Sturges'.
 ```Rscript
 # Choose one structural property
 metodos<-list(spectralDistributionTest, spectralEntropyTest, degreeDistributionTest,degreeCentralityTest,
@@ -65,7 +65,7 @@ res
 ```
 ## Comparando a importância dos vértices
 
-A função 'diffNetAnalysis' também realiza o teste de comparação de vertices em múltiplas redes. Da mesma forma, é necessário escolher um dos métodos de comparação (metodos) em 'method'. Nos argumentos 'varFile', 'labels' e 'varSets', o usruário insere os objetos da matriz de valores, a classificação das amostras e os grupos de variáveis, respectivamente. A função que constrói a matriz de correlação é inserida em 'adjacencyMatrix'. O usuário deve definir o numero de permutações para o cálculo do p-valor ('numPermutations'), o numero mínimo de vértices usados para construir as redes ('min.vert').
+A função 'diffNetAnalysis' também realiza o teste de comparação de vértices em múltiplas redes. Da mesma forma, é necessário escolher um dos métodos de comparação (métodos) em 'method'. Nos argumentos 'varFile', 'labels' e 'varSets', o usuário insere os objetos da matriz de valores, a classificação das amostras e os grupos de variáveis, respectivamente. A função que constrói a matriz de correlação é inserida em 'adjacencyMatrix'. O usuário deve definir o numero de permutações para o cálculo do p-valor ('numPermutations'), o numero mínimo de vértices usados para construir as redes ('min.vert').
 ```Rscript
 metodos<-list(degreeCentralityVertexTest,betweennessCentralityVertexTest, closenessCentralityVertexTest, eigenvectorCentralityVertexTest,
               clusteringCoefficientVertexTest)
