--- a/vignettes/BNS_tutorial_by_command_line_pt.Rmd
+++ b/vignettes/BNS_tutorial_by_command_line_pt.Rmd
@@ -1,16 +1,16 @@
 ---
 output:
-  word_document: default
-  pdf_document: default
   html_document:
     toc: true
     toc_depth: 3
     number_sections: true
+  pdf_document: default
+  word_document: default
 ---
-%\VignetteIndexEntry{3. Tutorial para o console do R}
-%\VignetteKeywords{Line command}
-%\VignettePackage{BioNetStat}
-%\VignetteEngine{knitr::knitr}
+\VignetteIndexEntry{3. Tutorial para o console do R}
+\VignetteKeywords{Line command 3}
+\VignettePackage{BioNetStat}
+\VignetteEngine{knitr::knitr}
 
 # Tutorial para uso do BioNetStat em linhas de comando
 
