--- a/vignettes/BNS_tutorial_by_command_line_us.Rmd
+++ b/vignettes/BNS_tutorial_by_command_line_us.Rmd
@@ -8,7 +8,7 @@ output:
     number_sections: true
 ---
 %\VignetteIndexEntry{2. R console tutorial}
-%\VignetteKeywords{Line command}
+%\VignetteKeywords{Line command 2}
 %\VignettePackage{BioNetStat}
 %\VignetteEngine{knitr::knitr}
 
